# cpp2

./: Bishop.cpp  Bishop.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessTool.cpp  ChessTool.h  GameManager.cpp  GameManager.h  GridSquare.cpp  GridSquare.h  King.cpp  King.h  Knight.cpp  Knight.h  Location.cpp  Location.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Tura.cpp  Tura.h  Vect.cpp  Vect.h  main.cpp
