cmake_minimum_required(VERSION 3.17)
project(hw2)

set(CMAKE_CXX_STANDARD 98)

add_executable(hw2 main.cpp Bishop.cpp Bishop.h ChessBoard.cpp ChessBoard.h GridSquare.cpp GridSquare.h ChessTool.cpp ChessTool.h GameManager.cpp GameManager.h Knight.cpp Knight.h King.cpp King.h Queen.cpp Queen.h Pawn.cpp Pawn.h Bishop.cpp Bishop.h Tura.cpp Tura.h Route.cpp Route.h Location.cpp Location.h)
